--- a/style.css
+++ b/style.css
@@ -1,3 +1,124 @@
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     font-family: 'Rubik', sans-serif;
+    color: #1b1c1f;
+}
+
+button {
+    font-family: 'Rubik', sans-serif;
+    outline: none;
+    border: none;
+}
+
+i,
+path,
+svg {
+    pointer-events: none;
+}
+
+.colors {
+    min-height: 80vh;
+    display: flex;
+    color: rgb(212, 212, 212);
+}
+
+.color {
+    height: 80vh;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    position: relative;
+    overflow: hidden;
+}
+
+.color h2 {
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.sliders {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0%;
+    background: rgb(251, 255, 252);
+    padding: 1rem;
+    width: 80%;
+    pointer-events: none;
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+    /* aadjustments */
+    opacity: 0;
+    transform: translateY(102px);
+    transition: all 0.5s ease-in-out;
+}
+
+.sliders.active {
+    opacity: 1;
+    transform: translateY(0px);
+    pointer-events: all;
+}
+
+.sliders button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5rem;
+    border: none;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    background: rgb(72, 72, 72);
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+}
+
+.panel {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 20vh;
+}
+
+.panel button {
+    font-size: 1.2rem;
+    margin: 1rem;
+    padding: 1rem 2rem;
+    background: rgb(31, 33, 63);
+    color: white;
+    cursor: pointer;
+    border-radius: 1rem;
+}
+
+.panel p {
+    font-size: 1.2rem;
+}
+
+.library-panel,
+.generate-panel,
+.save-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.adjust,
+.lock {
+    font-size: 2rem;
+    border: nonne;
+    background: none;
+    cursor: pointer;
+    margin: 2rem 0rem;
 }
