f-lock-added-to-color

--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #1b1c1f;
 }
 
 button {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Poppins', sans-serif;
     outline: none;
     border: none;
 }
